# CogSecSkills

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  ISA.md  QUICKSTART.md  README.md  TODO.md  codemeta.json  cogsecskills.yaml.example  pyproject.toml
.github/workflows/: ci.yml
.omo/drafts/: cogsecskills-deep-next-wave.md
.omo/plans/: cogsecskills-deep-next-wave.md  cogsecskills-visual-release-hardening.md
definitions/: AGENTS.md
definitions/cognitive_security/: astroturfing_detection.yaml  attack_surface_of_belief_mapping.yaml  audience_vulnerability_segmentation.yaml  cognitive_attack_kill_chain.yaml  cognitive_bias_audit.yaml  counter_messaging_strategy.yaml  deepfake_synthetic_media_triage.yaml  disinformation_campaign_analysis.yaml  emotional_manipulation_analysis.yaml  epistemic_security_posture_review.yaml  framing_and_priming_analysis.yaml  influence_operation_mapping.yaml  information_laundering_tracing.yaml  information_provenance_tracing.yaml  logical_fallacy_detection.yaml  manipulation_technique_identification.yaml  media_literacy_assessment.yaml  narrative_threat_assessment.yaml  prebunking_inoculation_design.yaml  propaganda_technique_classification.yaml  resilience_metrics_design.yaml  rumor_and_virality_assessment.yaml  source_credibility_evaluation.yaml  trust_and_credibility_modeling.yaml
definitions/counterintelligence/: adversary_tradecraft_profiling.yaml  analytic_process_hardening.yaml  denial_and_deception_detection.yaml  disinformation_attribution.yaml  elicitation_attempt_recognition.yaml  honeypot_and_canary_design.yaml  indicators_of_deception_analysis.yaml  insider_threat_indicator_review.yaml
definitions/critical_review/: assumption_surfacing_review.yaml  citation_integrity_review.yaml  claim_evidence_audit.yaml  code_security_review.yaml  ethics_and_harms_review.yaml  logical_coherence_review.yaml  project_critical_review.yaml  red_team_review.yaml  reproducibility_assessment.yaml  research_design_critique.yaml  statistical_validity_review.yaml  threat_model_review.yaml
definitions/information_environment/: bot_and_automation_detection.yaml  coordinated_inauthentic_behavior_detection.yaml  information_flow_network_analysis.yaml  narrative_competition_analysis.yaml  narrative_ecosystem_mapping.yaml  platform_affordance_risk_assessment.yaml  trend_and_emergence_monitoring.yaml
definitions/osint_integrity/: chain_of_custody_documentation.yaml  claim_provenance_verification.yaml  collection_plan_design.yaml  cross_source_corroboration.yaml  dataset_provenance_audit.yaml  geolocation_verification.yaml  image_and_media_forensics_triage.yaml  metadata_integrity_check.yaml  sock_puppet_detection.yaml  source_vetting.yaml
definitions/research_methods/: analytic_confidence_assessment.yaml  calibrated_estimation.yaml  evidence_grading.yaml  structured_literature_synthesis.yaml  structured_reporting_and_bluf.yaml
definitions/sat/: alternative_futures_scenarios.yaml  analysis_of_competing_hypotheses.yaml  analytic_matrices.yaml  argument_mapping.yaml  causal_flow_diagramming.yaml  chronologies_and_timelines.yaml  cross_impact_matrix.yaml  customer_aims_checklist.yaml  devils_advocacy.yaml  diagnostic_reasoning.yaml  getting_started_checklist.yaml  indicators_generation.yaml  indicators_validation.yaml  issue_redefinition.yaml  key_assumptions_check.yaml  mind_maps_and_concept_maps.yaml  morphological_analysis.yaml  multiple_hypothesis_generation.yaml  network_analysis.yaml  nominal_group_technique.yaml  outside_in_thinking.yaml  premortem_analysis.yaml  process_and_gantt_mapping.yaml  quadrant_crunching.yaml  ranking_and_prioritization.yaml  red_hat_analysis.yaml  signposts_of_change.yaml  sorting.yaml  starbursting.yaml  structured_analogies.yaml  structured_brainstorming.yaml  structured_self_critique.yaml  team_a_team_b.yaml  what_if_analysis.yaml
docs/: AGENTS.md  README.md  analyst-output-review.md  architecture.md  authoring-skills.md  catalogue.md  claim-boundaries.md  claude-code-skills.md  cli.md  configuration.md  connector-boundaries.md  evaluation-readiness.md  future-validation-protocols.md  harness-cookbook.md  harness-installation.md  quality-dashboard.html  quality-dashboard.md  release-checklist.md  release-claim-matrix.md  skill-contract.md  skill-worked-examples.md
docs/ageint/: README.md  adversarial-assurance.md  cognitive-security.md  counterintelligence.md  information-environment.md  osint-integrity.md  research-methods.md  structured-analytic-techniques.md
evals/: local_output_review.yaml
examples/: group-worked-examples.md  harness-smoke-transcripts.md  skill-worked-examples.yaml
manuscript/: 00_abstract.md  01_introduction.md  02_system_context.md  03_methods.md  04_artifacts_and_evidence.md  05_reproducibility.md  06_limitations_and_next_steps.md  07_ethics_and_responsible_use.md  98_symbols_glossary.md  99_references.md  AGENTS.md  README.md  S01_source_surface.md  S02_release_manifest.md  S10_skill_catalogue.md  S11_skill_metadata_matrix.md  SYNTAX.md  config.yaml  preamble.md  references.bib
output/data/: evaluation_readiness.json  publication_ledger.json  quality_dashboard.json  release_metadata.json  skill_catalogue.csv  skill_catalogue.json  skill_worked_examples.json
registry/: AGENTS.md  groups.yaml  harness_profiles.yaml  skills.yaml
scenarios/: AGENTS.md  defensive_readiness.yaml
skills/: AGENTS.md
src/: __init__.py
tests/: AGENTS.md  conftest.py  test_cogsecskills_agents_contract.py  test_cogsecskills_author.py  test_cogsecskills_cli_scaffold.py  test_cogsecskills_config.py  test_cogsecskills_dashboard.py  test_cogsecskills_docs_contract.py  test_cogsecskills_evals.py  test_cogsecskills_examples.py  test_cogsecskills_harness_validate.py  test_cogsecskills_insights.py  test_cogsecskills_loader_registry.py  test_cogsecskills_manuscript_assets.py  test_cogsecskills_manuscript_contract.py  test_cogsecskills_release_metadata.py  test_cogsecskills_scenarios.py  test_cogsecskills_spec.py  test_skill_library_conformance.py
(+720 files in other folders)
