# CogSecSkills — multiharness agentic skills for Cognitive Security.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogsecskills"
version = "0.1.0"
description = "Multiharness agentic tool-use skills for Cognitive Security and analytic tradecraft"
readme = "README.md"
authors = [
    {name = "Daniel Ari Friedman", email = "daniel@activeinference.institute"}
]
license = {text = "Apache-2.0"}
keywords = [
    "cognitive-security", "structured-analytic-techniques", "agentic-ai",
    "intelligence-analysis", "osint", "skills", "multiharness",
]
requires-python = ">=3.10"
# The runner is deliberately lightweight — PyYAML is the only runtime dependency.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]
# Plotting dependencies for the manuscript-asset figure generators
# (src/cogsecskills/manuscript_assets.py imports these lazily). Install with
# `uv pip install -e '.[manuscript]'` to exercise the figure tests/CLI.
manuscript = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/docxology/CogSecSkills"

[project.scripts]
cogsecskills = "cogsecskills.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cogsecskills*"]

[tool.setuptools.package-data]
cogsecskills = ["py.typed"]

[tool.mypy]
python_version = "3.10"
files = ["src/cogsecskills"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

# The manuscript-asset plotting stack (lazily imported in manuscript_assets.py)
# ships type stubs that can use newer-Python syntax than this mypy target; skip
# following them rather than parse third-party stubs. Our own code is still typed.
[[tool.mypy.overrides]]
module = [
    "numpy", "numpy.*",
    "matplotlib", "matplotlib.*",
    "seaborn", "seaborn.*",
    "pandas", "pandas.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
# Coverage is measured only on the runner package (the project's primary code).
source = ["cogsecskills"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
    "*/__main__.py",
    "*/test_*.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
