# CogSecSkills — multiharness agentic skills for Cognitive Security.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cogsecskills"
version = "1.2.0"
description = "Multiharness agentic tool-use skills for Cognitive Security and analytic tradecraft"
readme = "README.md"
authors = [
    {name = "Daniel Ari Friedman", email = "daniel@activeinference.institute"}
]
license = {text = "Apache-2.0"}
keywords = [
    "cognitive-security", "structured-analytic-techniques", "agentic-ai",
    "intelligence-analysis", "osint", "skills", "multiharness",
]
requires-python = ">=3.10"
# The runner is deliberately lightweight — PyYAML is the only runtime dependency.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]
# Manuscript/release figure rendering only (manuscript-assets --write). The core
# runner and every CI gate run without these; they are needed solely to
# regenerate the PNG figures under output/figures/ (figure generators in the
# manuscript_assets package import these lazily).
figures = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "seaborn>=0.13",
]

[project.urls]
Repository = "https://github.com/docxology/CogSecSkills"

[project.scripts]
cogsecskills = "cogsecskills.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cogsecskills*"]

[tool.setuptools.package-data]
cogsecskills = ["py.typed"]

[tool.mypy]
python_version = "3.10"
files = ["src/cogsecskills"]
# src-layout: treat src/ as the import base so nested subpackages resolve to a
# single canonical module name (cogsecskills.<sub>.<mod>), not src.cogsecskills.*.
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

# The optional `figures` extra (matplotlib/numpy/seaborn/pandas) is needed only
# to regenerate figures, not to type-check the runner. When it is installed
# alongside `dev`, mypy must not descend into those third-party stubs (numpy's
# stubs use 3.12-only `type` statements that abort the 3.10-targeted check). The
# bare module names are listed alongside the wildcards so the override also fires
# when a stub is imported as a top-level name.
[[tool.mypy.overrides]]
module = [
    "numpy", "numpy.*",
    "matplotlib", "matplotlib.*",
    "seaborn", "seaborn.*",
    "pandas", "pandas.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
# Coverage is measured only on the runner package (the project's primary code).
source = ["cogsecskills"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
    "*/__main__.py",
    "*/test_*.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
